WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70096
DFG JIT 32_64 - Performance fix for ResolveGlobal
https://bugs.webkit.org/show_bug.cgi?id=70096
Summary
DFG JIT 32_64 - Performance fix for ResolveGlobal
Yuqiang Xian
Reported
2011-10-14 02:40:05 PDT
Check structure of global object should be a pointer comparison instead of tag and payload pair comparison. This fix improves SunSpider by 7% on Linux 32, with bitops-bitwise-and improved by 4.75X.
Attachments
the patch
(3.97 KB, patch)
2011-10-14 02:47 PDT
,
Yuqiang Xian
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yuqiang Xian
Comment 1
2011-10-14 02:47:30 PDT
Created
attachment 110986
[details]
the patch Also two trivial fixes for successful 32-bit build are included.
WebKit Review Bot
Comment 2
2011-10-14 10:22:45 PDT
Comment on
attachment 110986
[details]
the patch Clearing flags on attachment: 110986 Committed
r97477
: <
http://trac.webkit.org/changeset/97477
>
WebKit Review Bot
Comment 3
2011-10-14 10:22:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug