DFG JIT 32_64 - Performance fix for ResolveGlobal https://bugs.webkit.org/show_bug.cgi?id=70096

Patch by Yuqiang Xian <yuqiang.xian@intel.com> on 2011-10-14
Reviewed by Gavin Barraclough.

Structure check of global object should be a pointer comparison
instead of a tag and payload pair comparison. This fix improves
SunSpider by 7% on Linux 32, with bitops-bitwise-and improved by 4.75X.
Also two trivial fixes for successful 32-bit build are included.

* dfg/DFGSpeculativeJIT.cpp:
* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):

Canonical link: https://commits.webkit.org/86206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97477 268f45cc-cd09-0410-ab3c-d52691b4dbfc